--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 						</div>
 
-						<input type="submit" class="btn btn-default" id="addTrain" value="submit">
+						<input type="submit" class="btn btn-default" id="addTrainBTN" value="submit">
 
 					</form>
 
