--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 							<th>Destination</th>
 							<th>Frequency (min)</th>
 							<th>Next Arrival</th>
+							<th>Minutes Away</th>
 						</tr>
 						</thead>
 
