--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 	<!-- Moment JS Link -->
 	<script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
 
+	<!-- Google Fonts Link -->
+	<link href="https://fonts.googleapis.com/css?family=Fondamento|Lora" rel="stylesheet">
+
 </head>
 
 <body>
@@ -32,7 +35,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 
-				<div class="jumbotron">
+				<div class="jumbotron" id="title">
 				 	<h1>The Platform 9&frac34; Timetable</h1>
 				 	<p>Trains that will take you on a magical journey anywhere!</p>
 				 	<a class="btn btn-primary btn-lg" href="#addTrain" role="button">Add Train</a>
@@ -45,7 +48,7 @@
 		<div class="row">
 			<div id="results">
 			</div>
-			<div class="col-lg-12">
+			<div class="col-lg-12" id="schedule">
 
 				<div class="panel panel-warning">
 					<!-- Default panel contents -->
@@ -78,7 +81,7 @@
 
 		<!-- Add Train -->
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12" id="formAdd">
 			
 				<div class="panel panel-warning">
 				
@@ -113,7 +116,9 @@
 
 						</div>
 
-						<input type="submit" class="btn btn-default" id="addTrainBTN" value="submit">
+						<div class="button-group">
+							<input type="submit" class="btn btn-default" id="addTrainBTN" value="submit">
+						</div>
 
 					</form>
 
